app/styles/style.scss
/* ... */
#carousel-home .carousel-caption {top: 82px; right: 50%; margin-right: -570px; left: auto; bottom: auto; width: 425px; text-align: left; padding-top: 45px; padding-bottom: 0; text-shadow: none;}

@media (min-width: 768px) {
#main h1#h1-home {margin-left: -360px;}
#home-top #shipment-rating-form-container {margin-left: -360px;}
#carousel-home .carousel-caption {margin-right: -360px; width: 245px;}
}
@media (min-width: 992px) {
#main h1#h1-home {margin-left: -470px;}
#home-top #shipment-rating-form-container {margin-left: -470px;}
#carousel-home .carousel-caption {margin-right: -470px; width: 313px; width: 235px;}
}
@media (min-width: 1200px) {
#main h1#h1-home {margin-left: -570px;}
#home-top #shipment-rating-form-container {margin-left: -570px;}
#carousel-home .carousel-caption {margin-right: -570px; width: 425px;}
}
@media (max-width: 991px) {
#home-top #carousel-home .carousel-inner, #home-top #carousel-home .carousel-control {display: none;}
#home-top {background: #fff;}
#carousel-home, #carousel-home .carousel-inner, #carousel-home .carousel-inner > .item {background: #fff;}
#shipment-rating-form-container {width: auto; margin: 15px auto; padding-left: 15px; padding-right: 15px;}
#main h1#h1-home {position: relative; top: auto; left: auto; width: auto; margin: 15px auto; padding-left: 15px; padding-right: 15px; color: #333;}
#home-top #shipment-rating-form-container {position: relative; top: auto; left: auto; width: auto; margin: 15px auto; padding-left: 15px; padding-right: 15px;}

#home-top #shipment-rating-form-container .nav-tabs > li.active > a,
#home-top #shipment-rating-form-container .nav-tabs > li.active > a:hover,
#home-top #shipment-rating-form-container .nav-tabs > li.active > a:focus {border-color: #ddd #ddd transparent;}
}

#home-bottom {}

#home-bottom-references {margin-bottom: 20px;}

#home-bottom-references #trustedshops_badge_container {/*float: right;*/ margin-left: auto; margin-right: auto; width: 212px; height: 60px; text-align: center;}
@media (max-width: 767px) {
  #home-bottom-references #trustedshops_badge_container, #home-bottom-references #trustedshops_badge_container_title {display: none;}
}

#home-bottom-references .transportation-operated-by {margin-bottom: 10px;}
#home-bottom-references .transportation-operated-by h3, #main h3.home-bottom-section-title {font-size: 14px; color: #666; font-weight: normal; margin: 0 0 0px 0; padding: 0; line-height: 20px; text-align: center;}
#home-bottom-references .transportation-operated-by .transportation-operated-by-imgs {margin-top: 15px;}
#home-bottom-references .transportation-operated-by img {vertical-align: middle; margin-right: 12px; margin-bottom: 5px;}
@media (max-width: 991px) {
  #home-bottom-references .transportation-operated-by{text-align: center;}
}
.transportation-operated-by2 {text-align: center;}
.transportation-operated-by2 img {vertical-align: middle; margin-right: 15px; max-height: 50px;}
.transportation-operated-by2 img:last-child {margin-right: 0;}

#home-bottom-presentation {margin-bottom: 25px; text-align: center;}
#home-bottom-presentation h2 {font-size: 18px; text-align: center; margin-bottom: 10px; color: #e55933;}
#home-bottom-presentation p {font-size: 14px; color: #666; text-align: justify;}
#home-bottom-presentation p strong {color: #e55933;}
#home-bottom-presentation p a {color: #2389a6;}

#home-bottom-instructions {margin-bottom: 15px;}
#home-bottom-instructions h2 {font-size: 16px; color: #333; margin-bottom: 10px; text-align: center;}
#home-bottom-instructions h2 a {text-decoration: none; font-size: 16px; color: #333; text-align: center;}
a.collapse-toggle:after {
/*font-family: 'Glyphicons Halflings'; content: "\e113";*/
font-family: 'FontAwesome'; content: "\f077";
margin-left: 10px; text-decoration: none;}
a.collapse-toggle.collapsed:after {/*content: "\e114";*/content: "\f078";}
a.collapse-toggle-panel {display: block; color: #666; font-size: 14px; text-decoration: none;}
a.collapse-toggle-panel:after {content: "\f0d8"; color: #2389a6; float: right; font-size: 20px; line-height: 20px;}
a.collapse-toggle-panel.collapsed:after {content: "\f0d7";}
#home-bottom-instructions p {font-size: 14px; color: #666; text-align: justify;}
#home-bottom-instructions ol {margin: 0 0 9px 15px; padding: 0;}
#home-bottom-instructions ol li {font-size: 14px; color: #666; text-align: justify; margin-bottom: 10px;}

.cms_content .panel-default > .panel-heading {background-color: #fff; background-image: none;}
.cms_content .panel-default > .panel-heading h4, .cms_content .panel-default > .panel-heading h4 a {color: #2389a6; font-weight: bold; text-decoration: none;}
.cms_content .panel-default > .panel-heading .panel-title a:after { font-family: 'FontAwesome'; content: "\f077"; margin-left: 10px; text-decoration: none; content: "\f0d8"; color: #2389a6; float: right; font-size: 18px; line-height: 18px;}
.cms_content .panel-default > .panel-heading .panel-title a.collapsed:after {content: "\f0d7";}

/* CAROUSEL */
/*
.carousel {}
.carousel-caption {z-index:10;}
.carousel .item, .carousel-inner {}
.carousel .item {}
.carousel .fill {width: 100%; height: 100%; background-position: center; background-size: cover;}
.carousel-inner > .item > img {position:absolute;  top:0;  left:0;  min-width:100%;  height:300px;}
*/

#carousel-home .carousel-control {width: 10%;}

#carousel-home .carousel-inner > .item {width: 100%; height: 473px; background-position: 50% 0; background-repeat: no-repeat;}
/*#carousel-home .carousel-inner > .item > img {position:absolute;  top:0;  left:0;  min-width:100%;  height:300px;}*/

/*#carousel-home .carousel-caption {right: 15%; left: auto; bottom: auto; top: 60px; width: 20%;}*/
/*#carousel-home .carousel-inner > .item img {max-height: 460px;}*/

#carousel-home .carousel-caption .espace-pro-headline {color: #fff; font-size: 17px; font-weight: normal; margin-bottom: 10px;}
/* ... */

